@@ -86,12 +86,16 @@ void ScopeChain::mark()
 
 ObjectImp *ScopeChain::bottom() const
 {
-    ScopeChainNode *last;
+    ScopeChainNode *last = 0;
     for (ScopeChainNode *n = _node; n; n = n->next) {
 	if (!n->next) {
 	    last = n;
 	}
     }
+    if (!last) {
+	return 0;
+    }
+
     return last->object;
 }
 
